# resonance

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  TODOS.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: lint-and-test.yaml  publish.yaml
alembic/: env.py
alembic/versions/: 1de39a06ff65_add_sync_tasks.py  60444bc8434c_initial_schema.py  6ac8ba60ca95_add_sync_tasks_enum_check_constraints.py  9c0e85015110_drop_sync_jobs.py  a3f7c1d9e204_add_deferred_status_description_columns.py  a4u5v6w7x8y9_rename_attendance_none_to_not_going.py  a4v5w6x7y8z9_add_concert_archives_service_type.py  a5v6w7x8y9z0_add_github_service_type.py  b1a2b3c4d5e6_add_candidate_tables.py  b2c3d4e5f6g7_backfill_candidates.py  b8e2f4a1c307_add_listening_events_unique_constraint.py  c4d5e6f7a890_biginteger_progress_fields.py  c4d5e6f7g8h9_add_normalized_raw_name.py  d1a2b3c4e5f6_add_user_timezone.py  d5e6f7g8h9i0_add_concert_archives_chunk_type.py  e2f3a4b5c6d7_add_sync_watermark.py  e6f7g8h9i0j1_add_mb_backfill_columns.py  f3a4b5c6d7e8_add_user_role.py  f7g8h9i0j1k2_add_mbid_backfill_task_type.py  g4b5c6d7e8f9_fix_role_case.py  g8h9i0j1k2l3_add_track_popularity_score.py  h5c6d7e8f9g0_add_track_duration.py  h9i0j1k2l3m4_add_popularity_backfill_task_type.py  i0j1k2l3m4n5_migrate_input_references_to_sources.py  i6d7e8f9g0h1_nullable_task_fields_bulk_job.py  j1k2l3m4n5o6_add_generation_pool_snapshot.py  j7e8f9g0h1i2_add_concert_tables.py  k2l3m4n5o6p7_add_generator_profile_status.py  k8f9g0h1i2j3_widen_task_type_column.py  l3m4n5o6p7q8_add_generator_profile_version.py  l9g0h1i2j3k4_purge_songkick_test_data.py  (+22 more)
docs/: admin-guide.md  architecture.md  design.md  developer-automation.md  security-review-2026-06-26.md  self-hosting.md  spotify-api-constraints.md  user-guide.md
tests/: test_api_account.py  test_api_admin.py  test_api_artist_search.py  test_api_auth.py  test_api_calendar_feeds.py  test_api_data.py  test_api_generators.py  test_api_matching.py  test_api_playlist_export.py  test_api_playlists.py  test_api_songkick_lookup.py  test_api_sync.py  test_api_taste.py  test_api_unified_sync.py  test_app.py  test_artist_enrichment.py  test_artist_import.py  test_artist_search_ranking.py  test_artist_tags.py  test_artist_utils.py  test_assume_user.py  test_backfill.py  test_cli_api.py  test_concert_archives_api.py  test_concert_archives_chunk.py  test_concert_archives_parser.py  test_concert_archives_worker.py  test_concert_integration.py  test_concert_prep_generator.py  test_concert_sync.py  test_concert_worker.py  test_config.py  test_connector_config.py  test_connector_display.py  test_connectors.py  test_crypto.py  test_dedup.py  test_dependencies.py  test_filters.py  test_genre_affinity.py  (+54 more)
(+221 files in other folders)
