[project]
name = "resonance"
version = "0.1.0"
description = "Personal media discovery and playlist generation platform"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "alembic>=1.18.4",
    "arq>=0.26",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis[hiredis]>=5.2",
    "cryptography>=44.0",
    "httpx>=0.28",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "psycopg2-binary>=2.9",
    "structlog>=25.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pre-commit>=4.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resonance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy resolves Mapped[] annotations at runtime, so datetime/uuid
# must remain as runtime imports even with `from __future__ import annotations`.
"src/resonance/models/*.py" = ["TC003"]

[tool.mypy]
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
